# toio.py

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SETUP_GUIDE.en.md  SETUP_GUIDE.ja.md  SETUP_GUIDE.zh.md  SIMPLE_API.en.md  SIMPLE_API.ja.md  move_toio_by_controller.py  move_toio_by_keyboard.py  pyproject.toml  sample2.py
code_cells/: examples.en.py
docs/: .buildinfo  INSTALL_TO_PYTHONISTA3.en.html  INSTALL_TO_PYTHONISTA3.ja.html  genindex.html  index.html  install_toio.py  latest  objects.inv  py-modindex.html  search.html  searchindex.js  toio.coordinate_systems.html  toio.cube.api.base_class.html  toio.cube.api.battery.html  toio.cube.api.button.html  toio.cube.api.configuration.html  toio.cube.api.html  toio.cube.api.id_information.html  toio.cube.api.indicator.html  toio.cube.api.motor.html  toio.cube.api.sensor.html  toio.cube.api.sound.html  toio.cube.html  toio.cube.multi_cubes.html  toio.cube.notification_handler_info.html  toio.device_interface.ble.html  toio.device_interface.dummy.html  toio.device_interface.html  toio.html  toio.logger.html  toio.position.html  toio.scanner.ble.html  toio.scanner.html  toio.simple.async_simple.html  toio.simple.html  toio.standard_id.html  toio.toio_uuid.html  toio.utility.html
docs-conf/: conf.py  index.rst  toio.cube.api.battery.rst  toio.cube.api.configuration.rst  toio.cube.api.sensor.rst  toio.cube.api.sound.rst  toio.cube.rst  toio.device_interface.rst  toio.rst  toio.simple.async_simple.rst  toio.simple.rst  toio.toio_uuid.rst
docs/.doctrees/: INSTALL_TO_PYTHONISTA3.en.doctree  INSTALL_TO_PYTHONISTA3.ja.doctree  environment.pickle  index.doctree  toio.coordinate_systems.doctree  toio.cube.api.base_class.doctree  toio.cube.api.battery.doctree  toio.cube.api.button.doctree  toio.cube.api.configuration.doctree  toio.cube.api.doctree  toio.cube.api.id_information.doctree  toio.cube.api.indicator.doctree  toio.cube.api.motor.doctree  toio.cube.api.sensor.doctree  toio.cube.api.sound.doctree  toio.cube.doctree  toio.cube.multi_cubes.doctree  toio.cube.notification_handler_info.doctree  toio.device_interface.ble.doctree  toio.device_interface.doctree  toio.device_interface.dummy.doctree  toio.doctree  toio.logger.doctree  toio.position.doctree  toio.scanner.ble.doctree  toio.scanner.doctree  toio.simple.async_simple.doctree  toio.simple.doctree  toio.standard_id.doctree  toio.toio_uuid.doctree  toio.utility.doctree
docs/1.0.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  toio.coordinate_systems.html  toio.cube.api.base_class.html  toio.cube.api.battery.html  toio.cube.api.button.html  toio.cube.api.configuration.html  toio.cube.api.html  toio.cube.api.id_information.html  toio.cube.api.indicator.html  toio.cube.api.motor.html  toio.cube.api.sensor.html  toio.html  (+12 more)
examples/: async_gather.py  async_gather_multi.py  async_task_group.py  detect_mat.py  motor_control.py  multi.py  multi2.py  multi_cubes_with_attribute.py  multi_cubes_with_named.py  read_position.py  scan_and_connect.py  tutorial_pursuer.py  tutorial_pursuer2.py
examples-simple/: angle_control.py  basic_motor_control.py  concurrent_futures_simple.py  get_current_grid.py  get_information_1.py  get_information_2.py  get_informations_1.py  get_informations_2.py  get_standard_id.py  goto_a_gird.py  lamp.py  move_to.py  multi_cubes_async_simple.py  sound.py  step.py
mkdocs/: add_noindex.py  conf.py  index.html  mkdocs.sh
pythonista3/: INSTALL_TO_PYTHONISTA3.en.md  INSTALL_TO_PYTHONISTA3.ja.md  install_toio.py.in  make_install_script.sh
tests/: _cubes.py  check_coverage.sh  conftest.py  make_cube_list.py  test_2cubes_connect_v1_2.py  test_2cubes_scanner.py  test__scanner.py  test_battery.py  test_button.py  test_configuration.py  test_connect.py  test_id_information.py  test_motor.py  test_sensor.py  test_sensor_v1_2.py  test_sound.py
toio/: __init__.py  coordinate_systems.py  logger.py  position.py  standard_id.py  toio_uuid.py  utility.py
tutorial/: tutorial.en.py  tutorial.ja.py  tutorial.zh.py
(+1151 files in other folders)
